https://github.com/JupiterJones/NetWorks/issues/25

--- a/app/Version3/NetWorks/NetWorks/UI/Base.lproj/Main.storyboard
+++ b/app/Version3/NetWorks/NetWorks/UI/Base.lproj/Main.storyboard
@@ -53,6 +53,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
                     <connections>
+                        <outlet property="detailCommentLabel" destination="0XM-y9-sOw" id="Vio-Ka-QLX"/>
                         <outlet property="detailDescriptionLabel" destination="0XM-y9-sOw" id="deQ-Na-JPF"/>
                     </connections>
                 </viewController>
