--- a/oocss/src/themes/netWorks/components/_form.scss
+++ b/oocss/src/themes/netWorks/components/_form.scss
@@ -41,8 +41,9 @@
     	margin-left: 0px;
     	margin-right: 12px;
     
+    	// Request - move save button to left
         &:nth-of-type(1), &:nth-of-type(2) {
-        	float: right;
+        	float: left;
         	margin-left: 12px;
 			margin-right: 0px;
         }
