--- a/www_root/files/NWFileLibrary/css/style.css
+++ b/www_root/files/NWFileLibrary/css/style.css
@@ -39,7 +39,8 @@ div.alert {
   padding-left: 30px;
 }
 
-.reportSearch {
+.row .col-sm-6:last-child .reportSearch,
+.row .col-sm-6:last-child button {
   float: right;
 }
 
@@ -165,7 +166,7 @@ table.report tbody tr:hover td:last-child, .reportComponent table tbody tr:hover
   margin-right: 12px;
 }
 .form-buttons button:nth-of-type(1), .form-buttons button:nth-of-type(2) {
-  float: right;
+  float: left;
   margin-left: 12px;
   margin-right: 0px;
 }
